# tidal-tui

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  player.rs  rtidalapi.rs
src/rtidalapi/: album.rs  artist.rs  playlog.rs  session.rs  track.rs  user.rs
