[package]
name = "tidal-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
once_cell = "1.21.3"
pyo3 = "0.25.0"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-flac", "symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
souvlaki = { version = "0.8.2", default-features = false, features = ["use_zbus"] }
stream-download = { version = "0.20.0", features = ["reqwest-native-tls"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8.23"
url = "2.5.4"
