[package]
name = "tidal-tui"
version = "0.2.1"
edition = "2024"

[features]
default = ["unofficial"]
unofficial = []

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenv = "0.15.0"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
once_cell = "1.21.3"
rand = "0.9.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-flac", "symphonia-aac", "symphonia-isomp4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
stream-download = { version = "0.20.0", features = ["reqwest-native-tls"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8.23"
url = "2.5.4"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
winit = "0.30"
