[package]
name = "tidal-tui"
version = "0.3.3"
edition = "2024"

[features]
default = ["unofficial"]
unofficial = []

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
color-eyre = "0.6.5"
cpal = { version = "^0.18", features = ["pipewire", "pulseaudio"] }
crossterm = "0.29.0"
dash-mpd = "0.20.3"
dotenv = "0.15.0"
futures-util = "0.3.32"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
once_cell = "1.21.3"
rand = "0.9.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["blocking", "json", "stream"] }
rodio = { git = "https://github.com/RustAudio/rodio", branch = "master", default-features = false, features = ["playback", "flac", "mp4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
stream-download = { version = "0.20.0", features = ["async-read", "reqwest-native-tls"] }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8.23"
url = "2.5.4"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
winit = "0.30"
